Make map bootstrap fingerprint cross-platform