@@ -124,11 +124,16 @@ class MapLoaderTest {
 
     @Test
     void pinsCanonicalMapBootstrapHash() throws Exception {
-        byte[] bytes = Files.readAllBytes(Path.of("resources", "json", "MapBootstrap.json"));
+        String canonical = Files.readString(
+                        Path.of("resources", "json", "MapBootstrap.json"),
+                        StandardCharsets.UTF_8)
+                .replace("\r\n", "\n")
+                .replace('\r', '\n');
         String hash = HexFormat.of().formatHex(
-                MessageDigest.getInstance("SHA-256").digest(bytes));
+                MessageDigest.getInstance("SHA-256")
+                        .digest(canonical.getBytes(StandardCharsets.UTF_8)));
 
-        assertEquals("def2d940b82b46f59976ffd7a3b526f7b4aae943fdb6c4c1b679865309be86e6", hash);
+        assertEquals("6298f902bb2797f63c539acbe6e51c176847954cdbb7a1c5cc3e017cd9530df3", hash);
     }
 
     @Test
